# simple_pcrd_simulator

./: CMakeLists.txt  CMakeSettings.json  battlelogger.cpp  pcrdsim_pylib.pyd  readme.md  unit_data.json
include/: GameController.h  action.h  battlelogger.h  buff.h  pcrmath.h  unit.h
pywrapper/: CMakeLists.txt  bind.cpp
src/: CMakeLists.txt  GameController.cpp  battlelogger.cpp  buff.cpp  pcrmath.cpp  unit.cpp
test/: CMakeLists.txt  main.cpp
