cmake_minimum_required(VERSION 3.1)
project(pcrdsim_pylib)

file(GLOB_RECURSE SRC_CPP *.cpp)
add_library(${PROJECT_NAME} SHARED ${SRC_CPP})
if (UNIX)
    if (APPLE)
        set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".so")
    endif(APPLE)
    set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
elseif(WIN32)
    if (NOT MSVC)
        set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
    endif()
    set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".pyd")
endif(UNIX)

target_link_libraries(${PROJECT_NAME} Simple_PCRD_Sim ${PYTHON_LIBRARIES})
